Fix dropdown menu alignment
Fixing the dropdown menu for navbar by setting it to be centered on the navbar item hovered on.

--- a/styles/main.css
+++ b/styles/main.css
@@ -129,6 +129,9 @@ a.dropdown-item {
   #navbarNav div.dropdown-menu {
     margin-top: 0;
     padding-top: .625rem;
+    width: 50%;
+    left: 25%;
+    text-align: center;
   }
 }
 
